--- a/playground.html
+++ b/playground.html
@@ -6,6 +6,6 @@
     <title>🐈 Playground</title>  
 </head>
 <body>
-    <script src="condicionales2.js"></script>
+    <script src="arrow-functions.js"></script>
 </body>
 </html>
