--- a/playground.html
+++ b/playground.html
@@ -6,6 +6,6 @@
     <title>🐈 Playground</title>  
 </head>
 <body>
-    <script src="for-while-dowhile-switch.js"></script>
+    <script src="dowhile.js"></script>
 </body>
 </html>
