--- a/playground.html
+++ b/playground.html
@@ -6,6 +6,7 @@
     <title>🐈 Playground</title>  
 </head>
 <body>
-    <script src="switch.js"></script>
+    <h1>Testing</h1>
+    <script src="arrays3.js"></script>
 </body>
 </html>
