--- a/playground.html
+++ b/playground.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Testing</h1>
-    <script src="clases.js"></script>
+    <script src="clases2.js"></script>
 </body>
 </html>
