--- a/Juego.html
+++ b/Juego.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>Simon Dice</title>
     <style>
+        *(
+            font-family: 'Arial';
+        )
         body {
             margin: 0;
             background: #dedede;
@@ -94,21 +97,29 @@
         <div id="verde" class="color verde right" data-color="verde"></div>
         <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js">
+    </script>
     <script>
         const celeste = document.getElementById('celeste')
         const violeta = document.getElementById('violeta')
         const naranja = document.getElementById('naranja')
         const verde = document.getElementById('verde')
         const btnEmpezar = document.getElementById('btnEmpezar')
+        const ULTIMO_NIVEL = 7
+
+        // swal('hola')
 
         class Juego {
             constructor() {
+                this.inicializar = this.inicializar.bind(this)
                 this.inicializar()
                 this.generarSecuencia()
-                this.siguienteNivel()
+                setTimeout(this.siguienteNivel, 500)
             }
             inicializar() {
-                btnEmpezar.classList.add('hide')
+                this.siguienteNivel=this.siguienteNivel.bind(this)
+                this.elegirColor = this.elegirColor.bind(this)
+                this.toggleBtnEmpezar()
                 this.nivel = 1
                 this.colores = {
                     //celeste: celeste
@@ -118,11 +129,22 @@
                     verde
                 }
             }
+
+            toggleBtnEmpezar(){
+                if (btnEmpezar.classList.contains('hide')){
+                    btnEmpezar.classList.remove('hide')
+                }else{
+                    btnEmpezar.classList.add('hide')
+                }
+            }
+
             generarSecuencia() {
-                this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random() * 4))
+                this.secuencia = new Array(ULTIMO_NIVEL).fill(0).map(n => Math.floor(Math.random() * 4))
             }
             siguienteNivel() {
+                this.subnivel = 0
                 this.iluminarSecuencia()
+                this.agregarEventosClick()
             }
             transformarNumeroAColor(numero) {
                 switch (numero) {
@@ -136,9 +158,21 @@
                         return 'verde'
                 }
             }
+            transformarColorANumero(color) {
+                switch (color) {
+                    case 'celeste':
+                        return 0
+                    case 'violeta':
+                        return 1
+                    case 'naranja':
+                        return 2
+                    case 'verde':
+                        return 3
+                }
+            }
             iluminarSecuencia() {
-                for (var i = 0; i < this.nivel; i++) {
-                    var color = this.transformarNumeroAColor(this.secuencia[i])
+                for (let i = 0; i < this.nivel; i++) {
+                    const color = this.transformarNumeroAColor(this.secuencia[i])
                     setTimeout(() => this.iluminarColor(color), 1000*i)
                 }
             }
@@ -150,13 +184,56 @@
 
             apagarColor(color){
                 this.colores[color].classList.remove('light')
+                // console.log('jala')
             }
-
+            agregarEventosClick(){
+                this.colores.celeste.addEventListener('click', this.elegirColor)
+                this.colores.violeta.addEventListener('click', this.elegirColor)
+                this.colores.naranja.addEventListener('click', this.elegirColor)
+                this.colores.verde.addEventListener('click', this.elegirColor)
+            }
+            eliminarEventosClick(){
+                this.colores.celeste.removeEventListener('click', this.elegirColor)
+                this.colores.violeta.removeEventListener('click', this.elegirColor)
+                this.colores.naranja.removeEventListener('click', this.elegirColor)
+                this.colores.verde.removeEventListener('click', this.elegirColor)
+            }
+            elegirColor(ev){
+                const nombreColor = ev.target.dataset.color
+                const numeroColor = this.transformarColorANumero(nombreColor)
+                this.iluminarColor(nombreColor)
+                if (numeroColor === this.secuencia[this.subnivel]){
+                    this.subnivel++
+                    if (this.subnivel === this.nivel){
+                        this.nivel++
+                        this.eliminarEventosClick()
+                        if (this.nivel === (ULTIMO_NIVEL +1)){
+                            this.ganoElJuego()
+                        }else{
+                            setTimeout(this.siguienteNivel, 1500)
+                        }
+                    }
+                }else{
+                    this.perdioElJuego()
+                }
+            }
+            ganoElJuego(){
+                swal('Webinoobs', 'Chingón', 'success')
+                .then(this.inicializar)
+            }
+            perdioElJuego(){
+                swal('Webinoobs', 'Poing', 'error')
+                .then(()=> {
+                    this.eliminarEventosClick()
+                    this.inicializar()
+                })
+            }
         }
 
         function empezarJuego() {
             window.juego = new Juego()
         }
+
     </script>
 </body>
 
